--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "json-server": "^0.16.1",
     "promise-polyfill": "^6.0.2",
     "webpack": "4.29.6",
-    "webpack-cli": "3.3.0",
-    "webpack-dev-server": "3.2.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
     "whatwg-fetch": "^3.0.0"
   }
 }
